# ace

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  MIGRATION.md  Makefile  PACKAGE_README.md  README.md  analysis-deps.txt  atmos-config.yaml  baseline_stats_config.yaml  camulator.md  change_plan.md  claude_compare.md  claude_condition_mask.md  claude_plan.md  clip.md  clip_value_error.md  codex_compare.md  codex_plan.md  config.afno.in  conftest.py  constraints.txt  dataset_sampler_plan.md  dev-requirements.txt  entrypoint.sh  environment.yaml  era5_shield_climatology.md  filter_repo.sh  grad_clip_swin.md  healpix-requirements.txt  inf_plan.md  infill-prediction-design.md  infill-prediction-implementation-plan.md  install_dependencies.sh  (+43 more)
fme/: README.md  __init__.py  conftest.py  fft.py  pyproject.toml  requirements.txt  setup.py  sht_fix.py  test_distributed_context.py  test_harmonics.py  test_torch.py
fme/ace/: __init__.py  evaluator.py  multi_call.py  requirements.py  run-train-and-inference.sh  stepper.py  test_ice_train.py  test_ocean_train.py  test_stepper.py  test_symbols.py  test_train.py  test_train_cmip.py  test_train_sp.py  validate_config.py
fme/ace/aggregator/: __init__.py  loss_metrics.py  null.py  plotting.py  residual_spectrum.py  tendency_variance.py  test_loss_metrics.py  test_plotting.py  test_residual_spectrum.py  test_tendency_variance.py  test_train.py  train.py
fme/ace/data_loading/: augmentation.py  batch_data.py  benchmark.py  cmip6.py  config.py  dataloader.py  getters.py  gridded_data.py  inference.py  perturbation.py  perturbation_pair.py  pool.py  sampler.py  step_diagnostics.py  test_augmentation.py  test_batch_data.py  test_benchmark.py  test_cmip6.py  test_data_loader.py  test_data_loading_config.py  test_metadata.py  test_perturbation.py  test_perturbation_pair.py  test_pool.py  test_sampler.py  test_subset.py
fme/ace/inference/: __main__.py  default_metadata.py  derived_variables.py  evaluator.py  inference.py  loop.py  stepper_test_data  test_derived_variables.py  test_evaluator.py  test_inference.py  test_segmented.py
fme/ace/registry/: __init__.py  hpx.py  land_net.py  local_net.py  m2lines.py  noise_conditioned.py  prebuilt.py  registry.py  sfno.py  stochastic_sfno.py  swin_transformer.py  test_hpx.py  test_land.py  test_local_net.py  test_m2lines.py  test_sfno.py  test_stochastic_sfno.py  test_swin_transformer.py  two_track_sfno.py
fme/ace/step/: __init__.py  camulator.py  cmip6.py  fcn2.py  fcn3.py  test_camulator.py  test_cmip6.py  test_two_track.py  two_track.py
fme/ace/stepper/: __init__.py  benchmark.py  derived_forcings.py  loss_schedule.py  parameter_init.py  resolution_curriculum.py  single_module.py  task.py  test_derived_forcings.py  test_legacy_single_module.py  test_loss_schedule.py  test_parameter_init.py  test_random_state.py  test_resolution_curriculum.py  test_single_module.py  test_single_module_csfno.py  test_task.py  test_time_length_probabilities.py  time_length_probabilities.py  train_stepper.py
fme/ace/test_spatial_parallelism/: test_annual_sp.py  test_coordinates_sp.py  test_distributed_fft2_and_ifft2.py  test_distributed_spectral_conv.py  test_helper.py  test_loss_sp.py  test_reduced_sp.py  test_sfnonet_spatial_dist.py  test_spectral_conv_s2.py  test_xarray_sp_dist.py
fme/ace/testing/: __init__.py  batch_data.py  (+3 more)
fme/core/: __init__.py  atmosphere_data.py  cli.py  cloud.py  co2_temperature_offset.py  config.py  constants.py  coordinates.py  dataset_info.py  dataset_info_errors.py  derived_variables.py  device.py  diagnostics.py  dicts.py  disk_metric_logger.py  distributed.py  ema.py  ensemble.py  fill.py  geostrophic.py  gridded_ops.py  histogram.py  humidity.py  ice.py  ice_data.py  labels.py  logging_utils.py  loss.py  mask_provider.py  masking.py  match_names.py  metadata.py  metrics.py  multi_call.py  name_and_prefix_matcher.py  nan_diagnostics.py  normalizer.py  ocean.py  ocean_data.py  ocean_derived_variables.py  (+83 more)
fme/coupled/: __init__.py  aggregator.py  dataset_info.py  evaluator.py  loss.py  requirements.py  stepper.py  test_aggregator.py  test_loss.py  test_requirements.py  test_stepper.py  test_stepper_integrations.py  test_train.py  typing_.py  validate_config.py
fme/diffusion/: loss.py  stepper.py  test_loss.py  test_regression.py  test_stepper.py  test_train.py  train.py  train_config.py  validate_config.py
fme/docs/: Makefile  api.rst  builder.rst  conf.py  evaluator-config.yaml  evaluator_config.rst  index.rst  inference-config.yaml  inference_config.rst  installation.rst  make.bat  modules.rst  quickstart.rst  requirements-pinned.txt  requirements.txt  train-config.yaml  training_config.rst  usage.rst
fme/downscaling/: _deterministic_models.py  aggregators.py  benchmark_channels_last.py  condition.py  datasets.py  datasets_new.py  evaluator.py  generate.py  metrics_and_maths.py  models.py  noise.py  patching.py  predict.py  predictor.py  requirements.py  samplers.py  samplers_update.py  spectral_loss.py  test_aggregators.py  test_datasets.py  test_datasets_new.py  test_evaluator.py  test_metrics_and_maths.py  test_models.py  test_noise.py  test_patching.py  test_predict.py  test_samplers.py  test_spectral_loss.py  test_train.py  test_utils.py  test_video_models.py  test_video_train.py  test_writer.py  train.py  validate_config.py  video_inference.py  video_models.py  video_train.py  writer.py
fme/fme/: __init__.py  require_gpu.py  sht_fix.py  test_harmonics.py  test_version.py
fme/tests/: test_device.py  test_harmonics.py  test_metrics.py  test_version.py
fme/translate/: __init__.py  components.py  domains.py  modules.py  test_components.py  test_domains.py  test_modules.py
models/fcn-mip/: .gitattributes  .gitlab-ci.yml  Dockerfile  ExtendedBestTrack_combined.txt  README.md  batch_selene.sh  config.hafno.in  config.in  conftest.py  interactive_selene.sh  land_sea_mask.npy  merge_in_geometric_branch.sh  patch_imports.sh  runtests.sh  score-ifs.py  setup.cfg  weather_events.json
(+5461 files in other folders)
