[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fme"
version = "2024.10.0"
description = "Train and evaluate weather/climate model emulators"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Ai2 Climate Modeling", email = "climate-public-maintainer@allenai.org"}
]
keywords = ["weather", "climate", "machine learning", "emulation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = ["dependencies", "optional-dependencies"]
[project.urls]
Homepage = "https://github.com/ai2cm/ace"
Documentation = "https://ai2-climate-emulator.readthedocs.io/"

[tool.setuptools.dynamic]
dependencies = { file = "fme/requirements.txt" }
optional-dependencies.dev = { file = "fme/dev-requirements.txt" }
optional-dependencies.docs = { file = "fme/docs/requirements.txt" }
optional-dependencies.deploy = { file = "fme/deploy-requirements.txt" }

[tool.setuptools.packages.find]
where = ["fme"]

[tool.setuptools.exclude-package-data]
fme = ["*.tests", "*.tests.*", "tests.*", "tests"]
