[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fme"
description = "Train and evaluate weather/climate model emulators"
readme = "PACKAGE_README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Ai2 Climate Modeling", email = "climate-public-maintainer@allenai.org"}
]
keywords = ["weather", "climate", "machine learning", "emulation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = ["version"]
dependencies = [
    "cartopy>=0.22.0",
    "dacite",
    "einops>=0.8.1",
    "gcsfs",
    "h5netcdf",
    "h5py",
    "imageio>=2.28.1",
    "matplotlib",
    "moviepy",
    "netcdf4",
    "numpy",
    "omegaconf>=2.1.0",
    "pandas",
    "plotly",
    "s3fs",
    "tensorly",
    "tensorly-torch",
    "torch-harmonics==0.8.0",
    "torch>=2.4.0",
    "wandb[media]>=0.19.0",
    "xarray",
    "zarr>=3",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "furo==2024.04.27",
    "sphinx==7.0.0",
    "sphinx_autodoc_typehints",
]
deploy = [
    "build",
    "twine",
]
graphcast = [
    "rtree>=1.4.1",
    "trimesh>=4.8.3",
]

[project.urls]
Homepage = "https://github.com/ai2cm/ace"
Documentation = "https://ai2-climate-emulator.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "fme.__version__"}

[tool.setuptools.packages]
find = {}

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "requirements-healpix.txt" },
]

[tool.ruff]
exclude = ["fme/ace/models/makani_fcn3/**", "fme/downscaling/modules/physicsnemo_unets_v2/**",]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W", "UP"]
ignore = ["D1", "D200", "D205", "D212", "E203", "W293", "F541", "E402"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"scripts/*" = ["D", "UP"]  # scripts may run in different python env, so ignore UP rules
"test_*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
known-third-party = ["wandb"]

[tool.coverage.run]
branch = true
source_pkgs = ["fme"]

[tool.coverage.report]
omit = ["test_*.py"]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[[tool.mypy.overrides]]
module = "fme.downscaling.modules.physicsnemo_unets_v2.*"
ignore_errors = true
