[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fme"
description = "Train and evaluate weather/climate model emulators"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Ai2 Climate Modeling", email = "climate-public-maintainer@allenai.org"}
]
keywords = ["weather", "climate", "machine learning", "emulation"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dynamic = ["dependencies", "optional-dependencies", "version"]
[project.urls]
Homepage = "https://github.com/ai2cm/ace"
Documentation = "https://ai2-climate-emulator.readthedocs.io/"

[tool.setuptools.dynamic]
version = {attr = "fme.__version__"}
dependencies = { file = "requirements.txt" }
optional-dependencies.dev = { file = "dev-requirements.txt" }
optional-dependencies.docs = { file = "docs/requirements.txt" }
optional-dependencies.deploy = { file = "deploy-requirements.txt" }

[tool.setuptools.packages]
find = {}

[tool.uv]
cache-keys = [
    { file = "requirements.txt" },
    { file = "dev-requirements.txt" },
    { file = "docs/requirements.txt" },
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "W"]
ignore = ["D1", "D200", "D205", "D212", "E203", "W293", "F541", "E402"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"scripts/*" = ["D"]
"test_*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
