[flake8]
exclude = docs
ignore = E203,W293,W503,E402
max-line-length = 88

[tool:pytest]
norecursedirs = .git external

[metadata]
name = fcn_mip

[options]
packages = find:
py_modules = fcn_mip networks config
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
	setuptools >= 38.4  # For pkg_resources
    pydantic >= 1.10
    datapane >= 0.16.0
	cfgrib >= 0.9.10.3
    properscoring >= 0.1
    typer

setup_requires =
	setuptools >= 38.4
	setuptools_scm
